apps/production/productivity/open-webui-public/patch_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui-deployment
spec:
  template:
    spec:
      containers:
        - name: open-webui
          volumeMounts:
            - mountPath: /app/backend/data
              name: config-data
              subPath: open-webui-public/config
