apps/production/productivity/open-webui-public/patch_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui-service
spec:
  selector:
    app: public-open-webui-deployment
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
