apps/production/productivity/open-webui-public/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: public-open-webui
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`chat.local.${DOMAIN}`) || Host(`chat.internal.${DOMAIN}`)
      kind: Rule
      services:
        - name: public-open-webui-service
          port: 8080
  tls:
    certResolver: letsencrypt
